# biorhythm

./: .clang-format  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  biorhythmus-chart.c  biorhythmus-chart.h  biorhythmus-cli.c  biorhythmus-cli.h  biorhythmus-fileview.c  biorhythmus-fileview.h  biorhythmus-math.c  biorhythmus-math.h  biorhythmus.c  config.h.in  configure  configure.ac  kbio.tar.bz2  theme.css
data/: CMakeLists.txt  Makefile.am  Makefile.in  biorhythm.1  biorhythm.desktop.in
debian/: README.Debian  biorhythm-default.ex  biorhythm.doc-base.EX  biorhythmus-default.ex  biorhythmus.postinst.debhelper  biorhythmus.prerm.debhelper  biorhythmus.substvars  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  menu  postinst  postrm  preinst.ex  prerm.ex  rules  watch.ex
debian/biorhythmus/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/biorhythmus/usr/share/doc-base/: biorhythmus
debian/biorhythmus/usr/share/doc/biorhythmus/: copyright
po/: CMakeLists.txt  Makefile.in  Makevars  POTFILES  POTFILES.in  de.po  de.pot  makepot  po_update.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  biorhythm-app-private.h  biorhythm-app.c  biorhythm-app.h  biorhythm-chart.c  biorhythm-chart.h  biorhythm-cli.c  biorhythm-cli.h  biorhythm-fileview.c  biorhythm-fileview.h  biorhythm-math.c  biorhythm-math.h  biorhythm-person.c  biorhythm-person.h  biorhythm-print.c  biorhythm-print.h  biorhythm.c  biorhythm.h  biorhythmus-chart.c  biorhythmus-chart.h  biorhythmus-cli.c  biorhythmus-cli.h  biorhythmus-fileview.c  biorhythmus-fileview.h  biorhythmus-math.c  biorhythmus-math.h  biorhythmus-print.c  biorhythmus-print.h  biorhythmus.c  biorhythmus.h  config.h.in
